#81 home page faces content alignment issue fixed

--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -347,12 +347,7 @@
   .faces-container {
     position: absolute;
     top: 0;
-    width: 88%;
-    right: 0;
-    left: 0;
-    margin: auto;
-    bottom: 0;
-    padding: 40px;
+    padding-top: 40px;
     .row {
       margin-bottom: 80px;
     }
@@ -620,13 +615,6 @@
 @media (min-width: @screen-lg-min) {
   .faces-tile-1 {
     .faces-container {
-      //position: absolute;
-      //top: 0;
-      //width: 88%;
-      //right: 0;
-      //left: 0;
-      //margin: auto;
-      //bottom: 0;
       h2 {
         color: @text-light;
         border-right: 1px solid @border-light;
